@startuml
skinparam classAttributeIconSize 0

class FacturaMensual {
    + calcularMonto(): double
}

class Cliente {
    - cantidadDispositivos: int
    + getCantidadDispositivos(): int
    + getPlan(): Plan
}

abstract class Plan {
    # tarifaBase: double
    + {abstract} calcularMonto(cliente: Cliente): double
}

class PlanHogar {
    + calcularMonto(cliente: Cliente): double
}

class PlanComercio {
    - adicionalPorDispositivo: double
    + calcularMonto(cliente: Cliente): double
}

class PlanCorporativo {
    - descuentoPorcentual: double
    + calcularMonto(cliente: Cliente): double
}

FacturaMensual --> "- cliente" Cliente
Cliente --> "- plan" Plan

Plan <|-- PlanHogar
Plan <|-- PlanComercio
Plan <|-- PlanCorporativo
@enduml